[tool.poetry]
name = "Sundial"
version = "0.12.0"
description = "The free and open-source automated time tracker. Cross-platform, extensible, privacy-focused."
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8,<3.13"
# Dependencies
urllib3 = "<2"
requests = "*"
click = "^8.0"
tabulate = "*"
typing-extensions = "*"

[sd-client]
path = "sd-client"  # Path to the sd-client directory relative to your project root

[sd-core]
path = "sd-core"

[sd-notify]
path = "sd-notify"

[sd-qt]
path = "sd-qt"

[sd-server]
path = "sd-server"

[sd-watcher-afk]
path = "sd-watcher-afk"

[sd-watcher-input]
path = "sd-watcher-input"

[sd-watcher-window]
path = "sd-watcher-window"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7"
pytest-cov = "*"
pytest-benchmark = "*"
psutil = "*"
pywin32-ctypes = {version = "*", platform = "win32"}
pefile = {version = "*", platform = "win32"}
pyinstaller = "^5.13"
pyinstaller-hooks-contrib = {git = "https://github.com/pyinstaller/pyinstaller-hooks-contrib.git", branch="master"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
